Fixing UI responsiveness on mobile and desktop: full width.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,11 @@
-html,
+html {
+  height: 100%;
+}
+
 body {
-  margin: 0px; padding: 0px;
-  height: 100vh;
-  width: 100vw;
-  /* display: flex; */
+  margin: 0px; 
+  padding: 0px;
+  min-height: 100%;
   font-family: 'Source Sans Pro';
   font-size: 18px;
-}
-body > div:first-child,
-div#__next,
-div#__next > div {
-height: 100%;
-width: 100%;
 }
